--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ build: off
 
 install:
 
-  - java -jar ./artifacts/app-ibank-build-for-testers.jar &
+  - java -jar ./artifacts/app-ibank-build-for-testers.jar -P:profile=test &
   - chmod +x gradlew
 
 build_script:
